--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="estilos/style.css">
   <title>Portfólio</title>
 </head>
+
 <body>
-  <header class="header-container">
+  <header class="header header-container">
     <div class="header-conteudo font-poppins">
       <a href="./">
         <div><img class="header-logo" src="images/logo-white.png" alt="logo"></div>
       </a>
-      <ul class="header-menu cor-1">
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#especialidades">Especialidades</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#portfolio">Portfólio</a></li>
-      </ul>
+      <nav class="nav">
+        <button class="btn-mobile">Menu</button>
+        <ul class="header-menu cor-1">
+          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#especialidades">Especialidades</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#portfolio">Portfólio</a></li>
+        </ul>
+      </nav>
       <button class="btn font-poppins"><a href="#">Contato</a></button>
     </div>
   </header>
@@ -27,11 +34,21 @@
     <section class="inicio-conteudo">
       <div class="inicio-texto cor-1 font-poppins">
         <h1>Transformando ideias em realidade digital<span class="cor-2">.</span></h1>
-        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
+        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade
+          intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
         <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
       </div>
       <div><img src="images/img-introducao.jpg" alt="imagem-introducao"></div>
     </section>
   </main>
+
+  <section class="especialidades-container" id="especialidades">
+    <div class="especialidades-conteudo">
+
+    </div>
+  </section>
 </body>
+
+<script src="./script/javascript.js"></script>
+
 </html>
