--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <div><img class="header-logo" src="images/logo-white.png" alt="logo"></div>
       </a>
       <nav class="nav">
-        <button class="btn-mobile">Menu</button>
+        <button class="btn-mobile">Menu
+
+        <span class="hamburguer"></span>   
+        </button>
         <ul class="header-menu cor-1">
           <li><a href="#inicio">Inicio</a></li>
           <li><a href="#especialidades">Especialidades</a></li>
