--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
       </a>
       <nav class="nav">
         <button class="btn-mobile">Menu
-
         <span class="hamburguer"></span>   
         </button>
         <ul class="header-menu cor-1">
-          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="#inicio" target="_blank">Inicio</a></li>
           <li><a href="#especialidades">Especialidades</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#portfolio">Portfólio</a></li>
