--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="hamburguer"></span>   
         </button>
         <ul class="header-menu cor-1">
-          <li><a href="#inicio" target="_blank">Inicio</a></li>
+          <li><a href="#inicio">Inicio</a></li>
           <li><a href="#especialidades">Especialidades</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#portfolio">Portfólio</a></li>
