--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="hamburguer"></span>   
         </button>
         <ul class="header-menu cor-1">
-          <li><a href="#inicio">Inicio</a></li>
+          <li><a href="./">Inicio</a></li>
           <li><a href="#especialidades">Especialidades</a></li>
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#portfolio">Portfólio</a></li>
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="inicio-container" id="inicio">
+  <main class="inicio-container">
     <section class="inicio-conteudo">
       <div class="inicio-texto cor-1 font-poppins">
         <h1>Transformando ideias em realidade digital<span class="cor-2">.</span></h1>
