--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div><img class="header-logo" src="images/logo-white.png" alt="logo"></div>
       </a>
       <nav class="nav">
-        <button class="btn-mobile">Menu
+        <button class="btn-mobile">
         <span class="hamburguer"></span>   
         </button>
-        <ul class="header-menu cor-1">
+        <ul class="header-menu cor-1" id="menu-mobile">
           <li><a href="./">Inicio</a></li>
           <li><a href="#especialidades">Especialidades</a></li>
           <li><a href="#sobre">Sobre</a></li>
