--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header header-container">
     <div class="header-conteudo font-poppins">
       <a href="./">
-        <div><img class="header-logo" src="images/logo-white.png" alt="logo"></div>
+        <img class="header-logo" src="images/logo-white.png" alt="logo">
       </a>
       <nav class="nav">
         <button class="btn-mobile">
