--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
     </section>
   </main>
 
-  <section class="especialidades-container" id="especialidades">
-    <div class="especialidades-conteudo">
-
-    </div>
-  </section>
+  <div class="seciton-background">
+    <section class="especialidades-container" id="especialidades">
+      <div class="especialidades-conteudo font-poppins cor-1">
+        <h1>Minha caixa de especialidades</h1>
+        <p>Descubra as habilidades e ferramentas que domino e que me permitem <br> criar soluções criativas e funcionais para meus clientes.</p>
+      </div>
+    </section>
+  </div>
 </body>
 
 <script src="./script/javascript.js"></script>
