--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="nav">
         <button class="btn-mobile">
-        <span class="hamburguer"></span>   
+          <span class="hamburguer"></span>
         </button>
         <ul class="header-menu cor-1" id="menu-mobile">
           <li><a href="./">Inicio</a></li>
@@ -40,15 +40,39 @@
           intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
         <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
       </div>
-      <div><img src="images/img-introducao.jpg" alt="imagem-introducao"></div>
+      <img src="images/img-introducao.jpg" alt="imagem-introducao">
     </section>
   </main>
 
   <div class="seciton-background">
     <section class="especialidades-container" id="especialidades">
-      <div class="especialidades-conteudo font-poppins cor-1">
-        <h1>Minha caixa de especialidades</h1>
-        <p>Descubra as habilidades e ferramentas que domino e que me permitem <br> criar soluções criativas e funcionais para meus clientes.</p>
+      <div class="especialidades-conteudo font-poppins cor-0">
+        <h1>especialidades</h1>
+        <p>Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais <span>habilidades técnicas e atividades que gosto de desempenhar</span>.</p>
+        <ul class="especilidades-itens">
+          <li>
+            <img src="images/emoji-2.png" alt="">
+            <h2>Design e prototipação de websites</h2>
+            <p>Construção de protótipos no <br> Figma, com layouts que melhor se adequem às suas necessidades e à identidade
+              visual da sua marca.</p>
+              <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
+          </li>
+
+          <li>
+            <img src="images/emoji-1.png" alt="">
+            <h2>Desenvolvimento web</h2>
+            <p>Codificação do seu website, utilizando HTML5, CSS3  e JavaSript, além das melhores práticas de SEO e
+              acessibilidade, colocando o projeto final no ar.</p>
+              <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
+          </li>
+
+          <li>
+            <img src="images/emoji-3.png" alt="">
+            <h2>UX/UI Design</h2>
+            <p>Conhecimentos em design de interface e experiência do usuário visualmente atraentes e intuitivas.</p>
+            <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
+          </li>
+        </ul>
       </div>
     </section>
   </div>
