--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Design e prototipação de websites</h2>
             <p>Construção de protótipos no <br> Figma, com layouts que melhor se adequem às suas necessidades e à identidade
               visual da sua marca.</p>
-              <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
+              <button class="btn btn-1 font-poppins"><a href="#">Entre em contato</a></button>
           </li>
 
           <li>
@@ -63,14 +63,14 @@
             <h2>Desenvolvimento web</h2>
             <p>Codificação do seu website, utilizando HTML5, CSS3  e JavaSript, além das melhores práticas de SEO e
               acessibilidade, colocando o projeto final no ar.</p>
-              <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
+              <button class="btn btn-2 font-poppins"><a href="#">Entre em contato</a></button>
           </li>
 
           <li>
             <img src="images/emoji-3.png" alt="">
             <h2>UX/UI Design</h2>
             <p>Conhecimentos em design de interface e experiência do usuário visualmente atraentes e intuitivas.</p>
-            <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
+            <button class="btn btn-3 font-poppins"><a href="#">Entre em contato</a></button>
           </li>
         </ul>
       </div>
