--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="estilos/style.css">
   <title>Portfólio</title>
 </head>
@@ -49,7 +48,7 @@
       <div class="especialidades-conteudo font-poppins cor-0">
         <h1>especialidades</h1>
         <p>Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais <span>habilidades técnicas e atividades que gosto de desempenhar</span>.</p>
-        <ul class="especilidades-itens">
+        <ul class="especilidades-itens font-montserrat">
           <li>
             <img src="images/emoji-2.png" alt="">
             <h2>Design e prototipação de websites</h2>
