--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
       </div>
     </section>
   </div>
+
+  <section class="sobre-container" id="sobre">
+    <div class="sobre-conteudo font-poppins">
+      <img src="images/img-perfil2.jpeg" alt="">
+      <div class="sobre-descricao">
+        <h1>Hellow, world! I'm <br> <span class="cor-2">Campos Dev.</span></h1>
+        <p>Desenvolvedor web Frond-end, com vasta expêriencia em desenvolvimento de websites desktop e mobile. Sou apaixonado por criar soluções técnologicas que resolvem problemas reais e que agregam valor aos usuários.</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 <script src="./script/javascript.js"></script>
