--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <img src="images/img-perfil2.jpeg" alt="">
       <div class="sobre-descricao">
         <h1>Hellow, world! I'm <br> <span class="cor-2">Campos Dev.</span></h1>
-        <p>Desenvolvedor web Frond-end, com vasta expêriencia em desenvolvimento de websites desktop e mobile. Sou apaixonado por criar soluções técnologicas que resolvem problemas reais e que agregam valor aos usuários.</p>
+        <p>Desenvolvedor web Front-end, com vasta expêriencia em desenvolvimento de websites desktop e mobile. Sou apaixonado por criar soluções técnologicas que resolvem problemas reais e que agregam valor aos usuários.</p>
       </div>
     </div>
   </section>
