--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
   </main>
 
-  <div class="seciton-background">
+  <div class="especialidades-bg">
     <section class="especialidades-container" id="especialidades">
       <div class="especialidades-conteudo font-poppins cor-0">
         <h1>especialidades</h1>
@@ -85,6 +85,12 @@
       </div>
     </div>
   </section>
+
+  <div class="">
+    <section>
+
+    </section>
+  </div>
 </body>
 
 <script src="./script/javascript.js"></script>
