--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="estilos/style.css">
   <title>Portfólio</title>
@@ -47,22 +49,24 @@
     <section class="especialidades-container" id="especialidades">
       <div class="especialidades-conteudo font-poppins cor-0">
         <h1>especialidades</h1>
-        <p>Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais <span>habilidades técnicas e atividades que gosto de desempenhar</span>.</p>
+        <p>Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais
+          <span>habilidades técnicas e atividades que gosto de desempenhar</span>.</p>
         <ul class="especilidades-itens font-montserrat">
           <li>
             <img src="images/emoji-2.png" alt="">
             <h2>Design e prototipação de websites</h2>
-            <p>Construção de protótipos no <br> Figma, com layouts que melhor se adequem às suas necessidades e à identidade
+            <p>Construção de protótipos no <br> Figma, com layouts que melhor se adequem às suas necessidades e à
+              identidade
               visual da sua marca.</p>
-              <button class="btn btn-1 font-poppins"><a href="#">Entre em contato</a></button>
+            <button class="btn btn-1 font-poppins"><a href="#">Entre em contato</a></button>
           </li>
 
           <li>
             <img src="images/emoji-1.png" alt="">
             <h2>Desenvolvimento web</h2>
-            <p>Codificação do seu website, utilizando HTML5, CSS3  e JavaSript, além das melhores práticas de SEO e
+            <p>Codificação do seu website, utilizando HTML5, CSS3 e JavaSript, além das melhores práticas de SEO e
               acessibilidade, colocando o projeto final no ar.</p>
-              <button class="btn btn-2 font-poppins"><a href="#">Entre em contato</a></button>
+            <button class="btn btn-2 font-poppins"><a href="#">Entre em contato</a></button>
           </li>
 
           <li>
@@ -80,15 +84,61 @@
     <div class="sobre-conteudo font-poppins">
       <img src="images/img-perfil2.jpeg" alt="">
       <div class="sobre-descricao">
-        <h1>Hellow, world! I'm <br> <span class="cor-2">Campos Dev.</span></h1>
-        <p>Desenvolvedor web Front-end, com vasta expêriencia em desenvolvimento de websites desktop e mobile. Sou apaixonado por criar soluções técnologicas que resolvem problemas reais e que agregam valor aos usuários.</p>
+        <h1>Hello, world! I'm <br> <span class="cor-2">Campos Dev.</span></h1>
+        <p>Desenvolvedor web Front-end, com vasta expêriencia em desenvolvimento de websites desktop e mobile. Sou
+          apaixonado por criar soluções técnologicas que resolvem problemas reais e que agregam valor aos usuários.</p>
       </div>
     </div>
   </section>
 
-  <div class="">
-    <section>
+  <div class="projetos-bg">
+    <section class="projetos-container" id="portfolio">
+      <div class="projetos-conteudo font-poppins cor-0">
+        <h1>Projetos em Destaque</h1>
+        <p><span>De ideias abstratas a projetos bem-sucedidos</span>, aqui estão alguns dos meus trabalhos recentes</p>
+        <div class="projeto-1">
+          <div class="projeto-imagem">
+            <a href="https://www.oneequipamentos.com.br/"><img src="images/projeto1-img.jpeg" alt="projeto-1"></a>
+          </div>
+          <div>
+            <h2 class="cor-1">Loja de maquinarios <br> para academia</h2>
+            <p>Sistema web desenvolvido para empresa ONEEQUIPAMENTOS, com funcionalidades para vendas de equipamentos.
+            </p>
+            <a class="link-projeto" href="https://www.oneequipamentos.com.br/"
+              target="_blank">www.oneequipamentos.com.br</a>
+          </div>
+        </div>
+      </div>
 
+      <div class="projetos-conteudo font-poppins cor-0">
+        <div class="projeto-2">
+          <div>
+            <h2 class="cor-1">D.O.N. BARBER & BEER</h2>
+            <p>Sistema web desenvolvido para empresa D.O.N, com foco em fazer com que o visitante se torne um cliente.
+            </p>
+            <a class="link-projeto" href="https://leonardocampos777.github.io/Projeto-Barber-shop/"
+              target="_blank">www.dombarbershop.com.br</a>
+          </div>
+          <div class="projeto-imagem">
+            <a href="https://leonardocampos777.github.io/Projeto-Barber-shop/"><img src="images/projeto-2.jpg"
+                alt="projeto-2"></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="projetos-conteudo font-poppins cor-0">
+        <div class="projeto-3">
+          <div class="projeto-imagem">
+            <a href="https://www.oneequipamentos.com.br/"><img src="images/projeto-3.jpg" alt="projeto-3"></a>
+          </div>
+          <div>
+            <h2 class="cor-1">Bicicletas feitas <br> sob medida.</h2>
+            <p>Sistema web desenvolvido para empresa BIKCRAFT, com funcionalidades para vendas de bicicletas.</p>
+            <a class="link-projeto" href="https://leonardocampos777.github.io/bikcraft/"
+              target="_blank">www.bikcraft.com.br</a>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
 </body>
