--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
               target="_blank">www.dombarbershop.com.br</a>
           </div>
           <div class="projeto-imagem">
-            <a href="https://leonardocampos777.github.io/Projeto-Barber-shop/"><img src="images/projeto-2.jpg"
-                alt="projeto-2"></a>
+            <a href="https://leonardocampos777.github.io/Projeto-Barber-shop/"><img src="images/projeto-2.jpg"alt="projeto-2"></a>
           </div>
         </div>
       </div>
