--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="especialidades-bg">
     <section class="especialidades-container" id="especialidades">
       <div class="especialidades-conteudo font-poppins cor-0">
-        <h1>especialidades</h1>
+        <h1 class="js-h1-efeito">especialidades</h1>
         <p>Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais
           <span>habilidades técnicas e atividades que gosto de desempenhar</span>.</p>
         <ul class="especilidades-itens font-montserrat">
@@ -94,7 +94,7 @@
   <div class="projetos-bg">
     <section class="projetos-container" id="portfolio">
       <div class="projetos-conteudo font-poppins cor-0">
-        <h1>Projetos em Destaque</h1>
+        <h1 class="js-h1-efeito">Projetos em Destaque</h1>
         <p><span>De ideias abstratas a projetos bem-sucedidos</span>, aqui estão alguns dos meus trabalhos recentes</p>
         <div class="projeto-1">
           <div class="projeto-imagem">
