--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="estilos/style.css">
+  <script>document.documentElement.classList.add('js');</script>
+  
   <title>Portfólio</title>
 </head>
 
@@ -36,7 +38,7 @@
   <main class="inicio-container">
     <section class="inicio-conteudo">
       <div class="inicio-texto cor-1 font-poppins">
-        <h1>Transformando ideias em realidade digital<span class="cor-2">.</span></h1>
+        <h1 class="js-h1-efeito">Transformando ideias em realidade digital</h1>
         <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade
           intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
         <button class="btn font-poppins"><a href="#">Entre em contato</a></button>
@@ -48,11 +50,11 @@
   <div class="especialidades-bg">
     <section class="especialidades-container" id="especialidades">
       <div class="especialidades-conteudo font-poppins cor-0">
-        <h1 class="js-h1-efeito">especialidades</h1>
+        <h1 class="js-scroll">especialidades</h1>
         <p>Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais
           <span>habilidades técnicas e atividades que gosto de desempenhar</span>.</p>
         <ul class="especilidades-itens font-montserrat">
-          <li>
+          <li class="js-li-scroll1">
             <img src="images/emoji-2.png" alt="">
             <h2>Design e prototipação de websites</h2>
             <p>Construção de protótipos no <br> Figma, com layouts que melhor se adequem às suas necessidades e à
@@ -61,7 +63,7 @@
             <button class="btn btn-1 font-poppins"><a href="#">Entre em contato</a></button>
           </li>
 
-          <li>
+          <li class="js-li-scroll2">
             <img src="images/emoji-1.png" alt="">
             <h2>Desenvolvimento web</h2>
             <p>Codificação do seu website, utilizando HTML5, CSS3 e JavaSript, além das melhores práticas de SEO e
@@ -69,7 +71,7 @@
             <button class="btn btn-2 font-poppins"><a href="#">Entre em contato</a></button>
           </li>
 
-          <li>
+          <li class="js-li-scroll3">
             <img src="images/emoji-3.png" alt="">
             <h2>UX/UI Design</h2>
             <p>Conhecimentos em design de interface e experiência do usuário visualmente atraentes e intuitivas.</p>
@@ -80,7 +82,7 @@
     </section>
   </div>
 
-  <section class="sobre-container" id="sobre">
+  <section class="sobre-container js-scroll" id="sobre">
     <div class="sobre-conteudo font-poppins">
       <img src="images/img-perfil2.jpeg" alt="">
       <div class="sobre-descricao">
@@ -92,9 +94,9 @@
   </section>
 
   <div class="projetos-bg">
-    <section class="projetos-container" id="portfolio">
+    <section class="projetos-container js-scroll" id="portfolio">
       <div class="projetos-conteudo font-poppins cor-0">
-        <h1 class="js-h1-efeito">Projetos em Destaque</h1>
+        <h1>Projetos em Destaque</h1>
         <p><span>De ideias abstratas a projetos bem-sucedidos</span>, aqui estão alguns dos meus trabalhos recentes</p>
         <div class="projeto-1">
           <div class="projeto-imagem">
