--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="especialidades-container" id="especialidades">
       <div class="especialidades-conteudo font-poppins cor-0">
         <h1 class="js-scroll">especialidades</h1>
-        <p>Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais
+        <p class="js-scroll">Posso agregar valor ao seu negócio de diversas formas, aqui estão algumas das minhas principais
           <span>habilidades técnicas e atividades que gosto de desempenhar</span>.</p>
         <ul class="especilidades-itens font-montserrat">
           <li class="js-li-scroll1">
@@ -96,9 +96,9 @@
   <div class="projetos-bg">
     <section class="projetos-container js-scroll" id="portfolio">
       <div class="projetos-conteudo font-poppins cor-0">
-        <h1>Projetos em Destaque</h1>
-        <p><span>De ideias abstratas a projetos bem-sucedidos</span>, aqui estão alguns dos meus trabalhos recentes</p>
-        <div class="projeto-1">
+        <h1 class="js-scroll">Projetos em Destaque</h1>
+        <p class="js-scroll"><span>De ideias abstratas a projetos bem-sucedidos</span>, aqui estão alguns dos meus trabalhos recentes</p>
+        <div class="projeto-1 js-projeto1">
           <div class="projeto-imagem">
             <a href="https://www.oneequipamentos.com.br/"><img src="images/projeto1-img.jpeg" alt="projeto-1"></a>
           </div>
@@ -113,7 +113,7 @@
       </div>
 
       <div class="projetos-conteudo font-poppins cor-0">
-        <div class="projeto-2">
+        <div class="projeto-2 js-projeto2">
           <div>
             <h2 class="cor-1">D.O.N. BARBER & BEER</h2>
             <p>Sistema web desenvolvido para empresa D.O.N, com foco em fazer com que o visitante se torne um cliente.
@@ -128,7 +128,7 @@
       </div>
 
       <div class="projetos-conteudo font-poppins cor-0">
-        <div class="projeto-3">
+        <div class="projeto-3 js-projeto3">
           <div class="projeto-imagem">
             <a href="https://www.oneequipamentos.com.br/"><img src="images/projeto-3.jpg" alt="projeto-3"></a>
           </div>
