--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
   </div>
 
-  <section class="sobre-container js-scroll" id="sobre">
+  <section class="sobre-container" id="sobre">
     <div class="sobre-conteudo font-poppins">
       <img src="images/img-perfil2.jpeg" alt="">
       <div class="sobre-descricao">
