--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <section class="sobre-container" id="sobre">
     <div class="sobre-conteudo font-poppins">
       <img src="images/img-perfil2.jpeg" alt="">
-      <div class="sobre-descricao">
+      <div class="sobre-descricao js-scroll-down">
         <h1>Hello, world! I'm <br> <span class="cor-2">Campos Dev.</span></h1>
         <p>Desenvolvedor web Front-end, com vasta expêriencia em desenvolvimento de websites desktop e mobile. Sou
           apaixonado por criar soluções técnologicas que resolvem problemas reais e que agregam valor aos usuários.</p>
