--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div>
             <h2 class="cor-1">Bicicletas feitas <br> sob medida.</h2>
             <p>Sistema web desenvolvido para empresa BIKCRAFT, com funcionalidades para vendas de bicicletas.</p>
-            <a class="link-projeto" href="https://leonardocampos777.github.io/bikcraft/"
+            <a class="link-projeto" href="https://www.bikcraft.com.br/"
               target="_blank">www.bikcraft.com.br</a>
           </div>
         </div>
