--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
             <h2 class="cor-1">D.O.N. BARBER & BEER</h2>
             <p>Sistema web desenvolvido para empresa D.O.N, com foco em fazer com que o visitante se torne um cliente.
             </p>
-            <a class="link-projeto" href="https://leonardocampos777.github.io/Projeto-Barber-shop/"
+            <a class="link-projeto" href="https://leonardocamposdev.github.io/Projeto-Barber-shop/"
               target="_blank">www.dombarbershop.com.br</a>
           </div>
           <div class="projeto-imagem">
-            <a href="https://leonardocampos777.github.io/Projeto-Barber-shop/"><img src="images/projeto-2.jpg"alt="projeto-2"></a>
+            <a href="https://leonardocamposdev.github.io/Projeto-Barber-shop/"><img src="images/projeto-2.jpg"alt="projeto-2"></a>
           </div>
         </div>
       </div>
@@ -131,7 +131,7 @@
       <div class="projetos-conteudo font-poppins cor-0">
         <div class="projeto-3 js-projeto3">
           <div class="projeto-imagem">
-            <a href="https://www.oneequipamentos.com.br/"><img src="images/projeto-3.jpg" alt="projeto-3"></a>
+            <a href="https://www.bikcraft.com.br/" target="_blank"><img src="images/projeto-3.jpg" alt="projeto-3"></a>
           </div>
           <div>
             <h2 class="cor-1">Bicicletas feitas <br> sob medida.</h2>
