--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <p class="js-scroll"><span>De ideias abstratas a projetos bem-sucedidos</span>, aqui estão alguns dos meus trabalhos recentes</p>
         <div class="projeto-1 js-projeto1">
           <div class="projeto-imagem">
-            <a href="https://www.oneequipamentos.com.br/"><img src="images/projeto1-img.jpeg" alt="projeto-1"></a>
+            <a href="https://www.oneequipamentos.com.br/" target="_blank"><img src="images/projeto1-img.jpeg" alt="projeto-1"></a>
           </div>
           <div>
             <h2 class="cor-1">Loja de maquinarios <br> para academia</h2>
