--- a/index.html
+++ b/index.html
@@ -143,6 +143,28 @@
       </div>
     </section>
   </div>
+
+  <footer class="footer-bg">
+    <div class="footer-container">
+      <div class="footer-conteudo1 cor-0">
+        <img class="footer-logo" src="images/logo-black.png" alt="logo-preto">
+        <p class="font-poppins">Estou disponível para novos projetos no momento. Entre <br> em contato comigo e marcamos uma conversa 👋</p>
+      </div>
+      <div class="footer-conteudo2 cor-0">
+        <ul class="footer-contato">
+          <li><a href="mailto:leonardocamposdev777@gmail.com">leonardocamposdev777@gmail.com</a></li>
+          <li><a href="tel:+5587996507215">(87) 99650-7215</a></li>
+        </ul>
+
+        <ul class="footer-redes-sociais">
+          <li><a href="https://www.instagram.com/leonardoc_777/" target="_blank"><img src="./icon/icons8-instagram-188.png" alt="instagram"></a></li>
+          <li><a href="https://github.com/LeonardoCamposdev" target="_blank"><img src="./icon/icons8-github-188.png" alt="github"></a></li>
+        </ul>
+      </div>
+      <p class="creditos cor-0 font-montserrat">© 2024 LC DEVELOPER - TODOS OS DIREITOS RESERVADOS
+        DESENVOLVIDO POR LEONARDO CAMPOS.</p>
+    </div>
+  </footer>
 </body>
 
 <script src="./script/javascript.js"></script>
