--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a href="https://www.oneequipamentos.com.br/" target="_blank"><img src="images/projeto1-img.jpeg" alt="projeto-1"></a>
           </div>
           <div>
-            <h2 class="cor-1">Loja de maquinarios <br> para academia</h2>
+            <h2 class="cor-1">maquinarios <br> para academia</h2>
             <p>Sistema web desenvolvido para empresa ONEEQUIPAMENTOS, com funcionalidades para vendas de equipamentos.
             </p>
             <a class="link-projeto" href="https://www.oneequipamentos.com.br/"
