--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <footer class="footer-bg">
     <div class="footer-container">
       <div class="footer-conteudo1 cor-0">
-        <img class="footer-logo" src="images/logo-black.png" alt="logo-preto">
+        <a href="./"><img class="footer-logo" src="images/logo-black.png" alt="logo-preto"></a>
         <p class="font-poppins">Estou disponível para novos projetos no momento. Entre <br> em contato comigo e marcamos uma conversa 👋</p>
       </div>
       <div class="footer-conteudo2 cor-0">
